build/k8s/tools/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: grafana.172.17.0.3.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
